@@ -20,6 +20,7 @@ environments.
 * Cleaned up vars in rrd and graph modules.
 * Fixed example1 to accord with var name changes.
 * Fixed a missed var in rrd.DataSource, a test in graph, and updated example2.
+* Updated example3.
 
 2006.01.29
 
